# batota-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs  memory.rs  scanner.rs
src/core/: memory.rs  mod.rs  process.rs  scanner.rs  types.rs
src/ui/: app.rs  layout.rs  mod.rs  state.rs  tables.rs
